test/tests/language/expr/escape/basic/incomplete_sequence.txt
error: incomplete unicode escape sequence
 --> tests/language/expr/escape/basic/incomplete_sequence.tql:6:7
  |
6 |   x: "\u11",
  |       ^^^^ 
  |
